--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 }
 h1 {
   margin-top: 1rem;
-  text-transform: uppercase;
   letter-spacing: 1.5px;
 }
 h1, p:last-of-type{
@@ -18,8 +17,9 @@ h1, p:last-of-type{
   
 }
 p:first-of-type {
-  color: hsl(190, 90%, 50%);
-  margin: 0.5rem 0;
+  color: rgb(201,36,36);
+  margin: 0.2rem 0;
+  font-size: 0.85rem;
 }
 p:last-of-type {
   margin: 1rem 0;
@@ -91,6 +91,7 @@ li a {
   padding: 0.6rem 0;
   color: white;
   border-radius: 0.8rem;
+  align-self: center ;
 }
 li a:active{
   color: #d4d4d4;
